--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,13 @@ bld/
 [Aa]ssets/[Ss]andbox/
 [Ss]andbox.meta
 
+# Ignore Noesis installation
+/[Aa]ssets/NoesisGUI/
+/[Aa]ssets/NoesisGUI.meta
+/[Aa]ssets/Resources.meta
+/[Aa]ssets/Resources/NoesisSettings.asset
+/[Aa]ssets/Resources/NoesisSettings.asset.meta
+
 
 # Visual Studio 2015/2017 cache/options directory
 # Uncomment if you have tasks that create the project's static files in wwwroot
