--- a/Caliburn.Noesis.Samples-blend.csproj
+++ b/Caliburn.Noesis.Samples-blend.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Assets\Caliburn.Noesis\RelayCommand.cs" />
     <Compile Include="Assets\Caliburn.Noesis\SafeCancellationTokenSource.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Screen.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\WindowConductor.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowScreen.cs" />
     <Compile Include="Assets\Samples\Scripts\SampleBootstrapper.cs" />
     <Compile Include="Assets\Samples\Scripts\ViewModels\DirectoryInfoExtensions.cs" />
