Add Rider project settings for Blend project

--- a/.editorconfig
+++ b/.editorconfig
@@ -131,6 +131,7 @@ resharper_use_indent_from_vs=false
 resharper_wrap_after_declaration_lpar=false
 resharper_wrap_array_initializer_style=chop_always
 resharper_wrap_braced_init_list_style=chop_if_long
+resharper_xml_max_line_length=100
 
 # ReSharper inspection severities
 resharper_arrange_local_function_body_highlighting=suggestion
