--- a/Caliburn.Noesis.Samples-blend.csproj
+++ b/Caliburn.Noesis.Samples-blend.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Caliburn.Noesis\AsyncGuard.cs" />
     <Compile Include="Assets\Caliburn.Noesis\AsyncRelayCommand.cs" />
     <Compile Include="Assets\Caliburn.Noesis\BindableCollection.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\CaliburnConfiguration.cs" />
     <Compile Include="Assets\Caliburn.Noesis\CloseResult.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Conductor.cs" />
     <Compile Include="Assets\Caliburn.Noesis\ConductorBase.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Assets\Caliburn.Noesis\DeactivationEventArgs.cs" />
     <Compile Include="Assets\Caliburn.Noesis\DefaultCloseStrategy.cs" />
     <Compile Include="Assets\Caliburn.Noesis\DialogConductor.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\DialogResult.cs" />
     <Compile Include="Assets\Caliburn.Noesis\DialogScreen.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Extensions\AssemblyExtensions.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Extensions\AsyncEventHandlerExtensions.cs" />
@@ -117,38 +119,36 @@
     <Compile Include="Assets\Caliburn.Noesis\IGuardClose.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IHaveActiveItem.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IHaveDisplayName.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\ILogger.cs" />
     <Compile Include="Assets\Caliburn.Noesis\INotifyPropertyChangedEx.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IParent.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IRaisingCommand.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IScreen.cs" />
     <Compile Include="Assets\Caliburn.Noesis\IWindowManager.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\LogManager.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\NameTransformer.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\AssemblySource.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\BootstrapperBase.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\CaliburnConfiguration.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\CloseDialog.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\DataTemplateManager.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\DebugConsoleLogger.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\DialogResult.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\Draggable.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\Execute.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\NameTransformer.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\NullCheckToVisibilityConverter.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\PropertyNameHelper.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\RegExHelper.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\Platform\ILogger.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\Platform\LogManager.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\Platform\NullToCollapsedConverter.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Assets\Caliburn.Noesis\Platform\ShellViewModel.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\TypeMappingConfiguration.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\UnitTestDetector.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Platform\UnityConsoleLogger.cs" />
-    <Compile Include="Assets\Caliburn.Noesis\Platform\ViewLocator.cs" />
     <Compile Include="Assets\Caliburn.Noesis\PropertyChangedBase.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\PropertyNameHelper.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\RegExHelper.cs" />
     <Compile Include="Assets\Caliburn.Noesis\RelayCommand.cs" />
     <Compile Include="Assets\Caliburn.Noesis\SafeCancellationTokenSource.cs" />
     <Compile Include="Assets\Caliburn.Noesis\Screen.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\ShellViewModel.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\TypeMappingConfiguration.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\UnitTestDetector.cs" />
+    <Compile Include="Assets\Caliburn.Noesis\ViewLocator.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowConductor.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowScreen.cs" />
     <Compile Include="Assets\Samples\Scripts\SampleBootstrapper.cs" />
