--- a/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
+++ b/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
@@ -1,27 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <BaseIntermediateOutputPath>Blend\obj\</BaseIntermediateOutputPath>
+    <LangVersion>8</LangVersion>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D195A34F-5AFC-49C9-92A0-5E1944164993}</ProjectGuid>
+    <ProjectGuid>{E1BC9C7D-E154-418B-AA33-02370BF2A8D7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
+    <AppDesignerFolder>Blend\HelloWorld\Properties</AppDesignerFolder>
     <RootNamespace>Caliburn.Noesis</RootNamespace>
-    <AssemblyName>Caliburn.Noesis.Samples-blend</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <LangVersion>8.0</LangVersion>
+    <AssemblyName>Caliburn.Noesis.Samples.HelloWorld</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <OutputPath>Blend\HelloWorld\bin\$(Configuration)\</OutputPath>
+    <BaseIntermediateOutputPath>Blend\HelloWorld\obj\$(Configuration)\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,7 +34,6 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -40,13 +43,12 @@
       <HintPath>packages\JetBrains.Annotations.2021.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\Microsoft.Expression.Interactions.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\Microsoft.Expression.Interactions.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Noesis.GUI.Extensions, Version=3.0.5.10009, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Noesis.GUI.Extensions.3.0.5\lib\net45\Noesis.GUI.Extensions.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Noesis.GUI.Extensions.3.0.5\lib\net45\Noesis.GUI.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
@@ -55,8 +57,11 @@
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
     </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -74,10 +79,6 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="Blend\App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
     <Compile Include="Assets\Caliburn.Noesis\ActivationEventArgs.cs" />
     <Compile Include="Assets\Caliburn.Noesis\ActivationProcessedEventArgs.cs" />
     <Compile Include="Assets\Caliburn.Noesis\AsyncEventHandler.cs" />
@@ -151,34 +152,22 @@
     <Compile Include="Assets\Caliburn.Noesis\ViewLocator.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowConductor.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowScreen.cs" />
-    <Compile Include="Assets\Samples\Scripts\SampleBootstrapper.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\DirectoryInfoExtensions.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\DirectoryNode.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\FileDialogViewModel.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\FileSystemNode.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\MainViewModel.cs" />
-    <Compile Include="Assets\Samples\Scripts\ViewModels\SampleWindowViewModel.cs" />
-    <Compile Include="Assets\Samples\Scripts\Views\FileDialogView.xaml.cs">
-      <DependentUpon>FileDialogView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Assets\Samples\Scripts\Views\MainView.xaml.cs">
+    <Compile Include="Assets\Samples\HelloWorld\Scripts\HelloWorldBootstrapper.cs" />
+    <Compile Include="Assets\Samples\HelloWorld\Scripts\ViewModels\MainViewModel.cs" />
+    <Compile Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Assets\Samples\Scripts\Views\SampleWindowView.xaml.cs">
-      <DependentUpon>SampleWindowView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Blend\App.xaml.cs">
+    <Compile Include="Blend\HelloWorld\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Blend\Properties\AssemblyInfo.cs">
+    <Compile Include="Blend\HelloWorld\Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Blend\App.config" />
+    <AppDesigner Include="Blend\HelloWorld\Properties\" />
+    <None Include="Blend\HelloWorld\App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -186,18 +175,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Assets\Samples\Scripts\Views\FileDialogView.xaml">
+    <Page Include="Assets\Samples\HelloWorld\Scripts\Resources\AllResources.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Assets\Samples\Scripts\Views\MainView.xaml">
+    <Page Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Assets\Samples\Scripts\Views\SampleWindowView.xaml">
-      <SubType>Designer</SubType>
+    <ApplicationDefinition Include="Blend\HelloWorld\App.xaml">
       <Generator>MSBuild:Compile</Generator>
-    </Page>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
