--- a/Caliburn.Noesis.Samples.FileExplorer-blend.csproj
+++ b/Caliburn.Noesis.Samples.FileExplorer-blend.csproj
@@ -9,17 +9,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1BC9C7D-E154-418B-AA33-02370BF2A8D7}</ProjectGuid>
+    <ProjectGuid>{E3439EAF-47A8-4C09-8378-95964584B8C9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Blend\HelloWorld\Properties</AppDesignerFolder>
+    <AppDesignerFolder>Blend\FileExplorer\Properties</AppDesignerFolder>
     <RootNamespace>Caliburn.Noesis</RootNamespace>
-    <AssemblyName>Caliburn.Noesis.Samples.HelloWorld</AssemblyName>
+    <AssemblyName>Caliburn.Noesis.Samples.FileExplorer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <OutputPath>Blend\HelloWorld\bin\$(Configuration)\</OutputPath>
-    <BaseIntermediateOutputPath>Blend\HelloWorld\obj\$(Configuration)\</BaseIntermediateOutputPath>
+    <OutputPath>Blend\FileExplorer\bin\$(Configuration)\</OutputPath>
+    <BaseIntermediateOutputPath>Blend\FileExplorer\obj\$(Configuration)\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -151,43 +151,31 @@
     <Compile Include="Assets\Caliburn.Noesis\ViewLocator.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowConductor.cs" />
     <Compile Include="Assets\Caliburn.Noesis\WindowScreen.cs" />
-    <Compile Include="Assets\Samples\HelloWorld\Scripts\HelloWorldBootstrapper.cs" />
-    <Compile Include="Assets\Samples\HelloWorld\Scripts\ViewModels\MainViewModel.cs" />
-    <Compile Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml.cs">
-      <DependentUpon>MainView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Blend\HelloWorld\App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Blend\HelloWorld\Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\FileExplorerBootstrapper.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\DirectoryInfoExtensions.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\DirectoryNode.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\FileDialogViewModel.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\FileSystemNode.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\MainViewModel.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\SampleWindowViewModel.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\Views\FileDialogView.xaml.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\Views\MainView.xaml.cs" />
+    <Compile Include="Assets\Samples\FileExplorer\Scripts\Views\SampleWindowView.xaml.cs" />
+    <Compile Include="Blend\FileExplorer\App.xaml.cs" />
+    <Compile Include="Blend\FileExplorer\Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AppDesigner Include="Blend\HelloWorld\Properties\" />
-    <None Include="Blend\HelloWorld\App.config" />
+    <None Include="Blend\FileExplorer\App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Assets\Samples\HelloWorld\Scripts\Resources\AllResources.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <ApplicationDefinition Include="Blend\HelloWorld\App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Assets\Caliburn.Noesis\Platform\ShellView.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Samples\HelloWorld\Scripts\Views\Aero Matics Regular.ttf" />
+    <Page Include="Assets\Samples\FileExplorer\Scripts\Views\FileDialogView.xaml" />
+    <Page Include="Assets\Samples\FileExplorer\Scripts\Views\MainView.xaml" />
+    <Page Include="Assets\Samples\FileExplorer\Scripts\Views\SampleWindowView.xaml" />
+    <ApplicationDefinition Include="Blend\FileExplorer\App.xaml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
