--- a/Caliburn.Noesis.Samples.FileExplorer-blend.csproj
+++ b/Caliburn.Noesis.Samples.FileExplorer-blend.csproj
@@ -102,6 +102,7 @@
     <Page Include="Assets\Caliburn.Noesis\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Samples\AutofacBootstrapperBase.cs" />
     <Compile Include="Assets\Samples\FileExplorer\Scripts\FileExplorerBootstrapper.cs" />
     <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\DirectoryInfoExtensions.cs" />
     <Compile Include="Assets\Samples\FileExplorer\Scripts\ViewModels\DirectoryNode.cs" />
