--- a/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
+++ b/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
@@ -102,6 +102,7 @@
     <Page Include="Assets\Caliburn.Noesis\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Samples\AutofacBootstrapperBase.cs" />
     <Compile Include="Assets\Samples\HelloWorld\Scripts\HelloWorldBootstrapper.cs" />
     <Compile Include="Assets\Samples\HelloWorld\Scripts\ViewModels\MainViewModel.cs" />
     <Compile Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml.cs">
