--- a/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
+++ b/Caliburn.Noesis.Samples.HelloWorld-blend.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Assets\Samples\HelloWorld\Scripts\Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Assets\Samples\LogConfigurator.cs" />
     <Compile Include="Blend\HelloWorld\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
