Update structure to have an easier setup flow and rework sample

--- a/Assets/Caliburn.Noesis/package.json
+++ b/Assets/Caliburn.Noesis/package.json
@@ -20,9 +20,9 @@
   },
   "samples": [
       {
-          "displayName": "Test Sample",
-          "description": "Testing how samples work",
-          "path": "Samples~/EarlySample"
+          "displayName": "Sample",
+          "description": "Demonstration of the framework",
+          "path": "Samples~/Sample"
       }
   ]
 }
